--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataLayer\conection.cs" />
     <Compile Include="DataLayer\custgroup.cs">
       <DependentUpon>Model_Atiran.tt</DependentUpon>
     </Compile>
